Delete n-step Q learning

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -11,6 +11,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = tf.constant([1,2,3,4,2,1])\n",
+    "b = tf.constant(3)\n",
+    "e = tf.constant([1,23,33,42,22,1])\n",
+    "c = tf.gather(e, tf.where(tf.equal(a, b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[33]], dtype=int32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "sess.run(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
